BM-20581 Fix: put VCArd role in employeeType LDAP attribute